# slow-trader

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/slow_trader/: __init__.py  bot.py  cli.py  config.py  order_manager.py  risk.py
src/slow_trader/exchanges/: __init__.py  alpaca.py  base.py  binance.py  demo.py
src/slow_trader/indicators/: __init__.py  base.py  momentum.py  moving_averages.py  trend.py  volatility.py
src/slow_trader/strategies/: __init__.py  base.py  combined.py  ma_crossover.py  macd_strategy.py  rsi_strategy.py
src/slow_trader/utils/: __init__.py  helpers.py  logger.py
